add_library(networkit
        networkit.cpp)

macro(networkit_add_module_directory modname)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/${modname})
    target_link_libraries(networkit PUBLIC ${modname})
endmacro()

macro(networkit_add_module modname)
    add_library(networkit_${modname} ${ARGN})
endmacro()


networkit_add_module_directory("algebraic")
networkit_add_module_directory("auxiliary")
networkit_add_module_directory("base")
networkit_add_module_directory("centrality")
networkit_add_module_directory("clique")
networkit_add_module_directory("coarsening")
networkit_add_module_directory("community")
networkit_add_module_directory("components")
networkit_add_module_directory("correlation")
networkit_add_module_directory("distance")
networkit_add_module_directory("dynamics")
networkit_add_module_directory("edgescores")
networkit_add_module_directory("flow")
networkit_add_module_directory("generators")
networkit_add_module_directory("geometric")
networkit_add_module_directory("global")
networkit_add_module_directory("graph")
networkit_add_module_directory("independentset")
networkit_add_module_directory("io")
networkit_add_module_directory("layout")
networkit_add_module_directory("linkprediction")
networkit_add_module_directory("matching")
#networkit_add_module_directory("numerics")
networkit_add_module_directory("overlap")
networkit_add_module_directory("scd")
networkit_add_module_directory("scoring")
networkit_add_module_directory("simulation")
networkit_add_module_directory("sparsification")
networkit_add_module_directory("structures")
if (NETWORKIT_BUILD_TESTS)
    #networkit_add_module_directory("test")
endif()
networkit_add_module_directory("viz")
