add_subdirectory("algebraic")
add_subdirectory("auxiliary")
add_subdirectory("base")
add_subdirectory("centrality")
add_subdirectory("clique")
add_subdirectory("coarsening")
add_subdirectory("community")
add_subdirectory("components")
add_subdirectory("correlation")
add_subdirectory("distance")
add_subdirectory("dynamics")
add_subdirectory("edgescores")
add_subdirectory("flow")
add_subdirectory("generators")
add_subdirectory("geometric")
add_subdirectory("global")
add_subdirectory("graph")
add_subdirectory("independentset")
add_subdirectory("io")
add_subdirectory("layout")
add_subdirectory("linkprediction")
add_subdirectory("matching")
#add_subdirectory("numerics")
add_subdirectory("overlap")
add_subdirectory("randomization")
add_subdirectory("scd")
add_subdirectory("scoring")
add_subdirectory("simulation")
add_subdirectory("sparsification")
add_subdirectory("structures")
add_subdirectory("viz")
