networkit_add_module(centrality
    ApproxBetweenness.cpp
    ApproxCloseness.cpp
    Betweenness.cpp
    Centrality.cpp
    Closeness.cpp
    CoreDecomposition.cpp
    DegreeCentrality.cpp
    DynApproxBetweenness.cpp
    DynBetweenness.cpp
    DynBetweennessOneNode.cpp
    DynTopHarmonicCloseness.cpp
    EigenvectorCentrality.cpp
    EstimateBetweenness.cpp
    GroupCloseness.cpp
    GroupDegree.cpp
    HarmonicCloseness.cpp
    KPathCentrality.cpp
    KatzCentrality.cpp
    LaplacianCentrality.cpp
    LocalClusteringCoefficient.cpp
    LocalPartitionCoverage.cpp
    PageRank.cpp
    PermanenceCentrality.cpp
    Sfigality.cpp
    SpanningEdgeCentrality.cpp
    TopCloseness.cpp
    TopHarmonicCloseness.cpp
    )

networkit_module_link_libraries(centrality
    PRIVATE
        OpenMP::OpenMP_CXX
    )

networkit_module_link_modules(centrality
        algebraic
        auxiliary
        base
        components
        distance
        dyn_distance
        dynamics
        graph
        structures
    )

add_subdirectory(test)

