networkit_add_module(centrality
    ApproxBetweenness.cpp
    ApproxCloseness.cpp
    ApproxElectricalCloseness.cpp
    ApproxGroupBetweenness.cpp
    ApproxSpanningEdge.cpp
    Betweenness.cpp
    Centrality.cpp
    Closeness.cpp
    CoreDecomposition.cpp
    DegreeCentrality.cpp
    DynApproxBetweenness.cpp
    DynBetweenness.cpp
    DynBetweennessOneNode.cpp
    DynKatzCentrality.cpp
    DynTopHarmonicCloseness.cpp
    EigenvectorCentrality.cpp
    EstimateBetweenness.cpp
    ForestCentrality.cpp
    GedWalk.cpp
    GroupCloseness.cpp
    GroupClosenessLocalSearch.cpp
    GroupClosenessGrowShrink.cpp
    GroupClosenessGrowShrinkImpl.cpp
    GroupClosenessLocalSwaps.cpp
    GroupDegree.cpp
    GroupHarmonicCloseness.cpp
    HarmonicCloseness.cpp
    KadabraBetweenness.cpp
    KatzCentrality.cpp
    KPathCentrality.cpp
    LaplacianCentrality.cpp
    LocalClusteringCoefficient.cpp
    LocalPartitionCoverage.cpp
    LocalSquareClusteringCoefficient.cpp
    PageRank.cpp
    PermanenceCentrality.cpp
    Sfigality.cpp
    SpanningEdgeCentrality.cpp
    TopCloseness.cpp
    TopHarmonicCloseness.cpp
    )

networkit_module_link_modules(centrality
        algebraic
        auxiliary
        components
        distance
        dyn_distance
        dynamics
        graph
        linkprediction
        reachability
        structures
    )

add_subdirectory(test)
