networkit_add_module(generators
    BarabasiAlbertGenerator.cpp
    ChungLuGenerator.cpp
    ClusteredRandomGraphGenerator.cpp
    DorogovtsevMendesGenerator.cpp
    DynamicBarabasiAlbertGenerator.cpp
    DynamicDGSParser.cpp
    DynamicDorogovtsevMendesGenerator.cpp
    DynamicForestFireGenerator.cpp
    DynamicGraphGenerator.cpp
    DynamicGraphSource.cpp
    DynamicHyperbolicGenerator.cpp
    DynamicPathGenerator.cpp
    DynamicPubWebGenerator.cpp
    EdgeSwitchingMarkovChainGenerator.cpp
    ErdosRenyiGenerator.cpp
    HavelHakimiGenerator.cpp
    HyperbolicGenerator.cpp
    LFRGenerator.cpp
    PowerlawDegreeSequence.cpp
    PubWebGenerator.cpp
    RegularRingLatticeGenerator.cpp
    RmatGenerator.cpp
    StaticDegreeSequenceGenerator.cpp
    StaticGraphGenerator.cpp
    StochasticBlockmodel.cpp
    WattsStrogatzGenerator.cpp
    )

target_link_libraries(networkit_generators
    PRIVATE
        OpenMP::OpenMP_CXX
    PUBLIC
        networkit_auxiliary
        networkit_base
        networkit_dynamics
        networkit_geometric
        networkit_graph
        networkit_structures
    )

add_subdirectory(quadtree)
add_subdirectory(test)

